--- a/content/1.docs/1.getting-started/1.index.md
+++ b/content/1.docs/1.getting-started/1.index.md
@@ -1,5 +1,5 @@
 ---
-title: Introduction
+title: Check What To DO 
 description: Welcome to Nuxt UI SaaS template.
 navigation:
   icon: i-lucide-house
