--- a/content/4.changelog/2.teams.md
+++ b/content/4.changelog/2.teams.md
@@ -1,22 +1,40 @@
 ---
-title: "Teams & Collaboration"
-description: "Introducing Teams! Invite colleagues, assign roles, and collaborate in real-time. Perfect for startups and growing businesses."
-date: "2024-05-10"
-image: https://images.unsplash.com/photo-1518609878373-06d740f60d8b?auto=format&fit=crop&w=800&q=80
+title: "Spring ’25: Safer Recipes & Versioned Dashboards 🌱"
+description: "Spring ’25 gives CRM Analytics more governance superpowers – better version control, recipe visibility, and stronger external data hygiene."
+date: "2025-01-12"
+image: https://images.unsplash.com/photo-1531297484001-80022131f5a1?auto=format&fit=crop&w=1200&q=80
 ---
 
-🤝 Collaboration just got easier! With Teams, you can now work together more efficiently and securely. This update is all about empowering organizations to scale and manage their members with confidence.
+🌱 **Spring ’25 is the governance + quality control drop** for CRM Analytics.  
+Think: fewer “who deleted this?!”, more “don’t worry, we can roll back.” Recipes, dashboards, and external connections all get more transparent and secure.
 
-We listened to your feedback and built a flexible system for inviting colleagues, assigning roles, and tracking activity. Whether you're onboarding new hires or collaborating across departments, Teams has you covered. 👥
+**Key CRM Analytics upgrades:**
 
-**What's new:**
-- ✉️ Invite team members via email or shareable link
-- 🛡️ Assign roles (Admin, Member, Viewer) for granular access control
-- 🔔 Real-time activity tracking and notifications
-- 📊 Team-based dashboards and analytics for better insights
-- 🔄 Easy switching between multiple teams and organizations
+- 🎨 **More accessible donut & stacked bar charts**  
+  Donut and stacked bar charts now support improved colour contrast for up to five segments, making key categories easier to read and more accessible.
 
-**Behind the scenes:** 🏗️
-We re-architected our user management system to support organizations of any size. This paves the way for future features like SSO, advanced permissions, and audit logs.
+- 🧾 **Version control for dashboard components**  
+  View and restore previous versions of CRM Analytics dashboard components without diving into APIs. It’s basically “mini Git” for dashboard edits.
 
-Perfect for startups and growing businesses. Try it out and streamline your workflow! 🚀
+- 🔍 **Smarter recipe sampling & previewing**  
+  Recipes get better data sampling options and richer previews with sorting, searching, and value inspection—making debugging and teaching data prep much easier.
+
+- 🕵️ **Audit trail for dataflow & recipe deletions**  
+  The setup audit trail records who deleted a dataflow or recipe and when, so you can finally answer “who broke prod?” with actual evidence.
+
+- 🧑‍🏫 **Read-only recipe access**  
+  The “Recipes View Only” permission gives users read-only visibility into recipe definitions and flows—perfect for learners, auditors, and stakeholders who need to understand pipelines without editing them.
+
+- 🔐 **Safer external Salesforce connections + faster syncs**  
+  - OAuth 2.0 for external Salesforce connections  
+  - Incremental syncs for the Salesforce External Connector and Analytics External Data API  
+
+**Why it matters for your academy:**  
+
+Spring ’25 is perfect for modules around:
+
+- Data governance & auditing in CRM Analytics  
+- Safe collaboration between builders and read-only users  
+- Best practices for external connections & incremental loads  
+
+Use this release when you run lessons like **“Enterprise-Grade CRM Analytics: Versioning, Permissions & Monitoring.”**
